# polygons-intersection

./: 1st version  CMakeLists.txt  README.md  current version  current version.cpp  drawing.cpp  intersecting.cpp  report polygons.docx  tests.txt  Отчёт (3).docx
inter/: CMakeLists.txt  addwindow.cpp  inter_ru_KZ.ts  mainwindow.cpp  mainwindow.ui  polygonsinfo.cpp  polygonsinfo.h
polygons/: CMakeLists.txt  current version.cpp  main.cpp  tests.txt
qt polygons/inter/: CMakeLists.txt  addwindow.h  addwindow.ui  main.cpp  polygonsinfo.ui
triangles/: current version.cpp
